inc/assets/less/tc_custom_responsive.less
/* CUSTOMIZR RESPONSIVE CSS
    -------------------------------------------------- */
/* Smooth resizing */
.is-customizing img, .is-customizing .container-fluid, .is-customizing .tc-footer-social-links-wrapper {
    -moz-transition: width 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    -webkit-transition: width 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    -moz-transition: width 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    -o-transition: width 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    transition: width 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
}
.is-customizing h1, .is-customizing h2, .is-customizing h3, .is-customizing h4, .is-customizing h5, .is-customizing h6, .is-customizing p {
   -moz-transition: font-size 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    -webkit-transition: font-size 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    -moz-transition: font-size 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    -o-transition: font-size 0.15s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
    transition: font-size 0.2s ease-in-out, left 0.15s ease-in-out, right 0.15s ease-in-out;
}

/* Media queries */
@media (max-width: 1200px) {

  /* elements */
  select {
    width: 100%;
  }

  /*Other*/
  .carousel .item {
    line-height: 385px;
    overflow: hidden;
    min-height: 385px;
  }
  #left .round-div {
    left: -77px;
  }
  /* one sidebar case (span9) */
  .span9.article-container .round-div {
    width: 153px;
    height: 153px;
    top: -59px;
    left: -69px;
  }
  .span9.article-container .thumb-wrapper img {
    max-width: 250px;
  }

  /* two sidebars case (span9) */
  .span6.article-container .round-div {
    width: 95px;
    height: 95px;
    top: -82px;
    left: -80px;
  }
  /* MENU CHANGES SINCE V3.2.0 */
  .menu > li > a {
    font-size: 15px;
    line-height: 20px;
  }
  .menu > li > ul li a {
    font-size: 12px;
  }
}

@media (min-width: 980px) {
  /* ROUND DIV FOR 3 columns Top or bottom thumb position SINCE V3.2.0*/
  .span6 .thumb-position-top .round-div {
    width: 125px;
    height: 125px;
    top: -78px;
    left: -33px;
  }

  /* HOVER EFFECTS ON MENU SINCE V3.2.0*/
  .tc-submenu-fade .nav > li > ul{
    opacity: 0;
    top: 75%;
    visibility: hidden;
    display: block;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    -ms-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
  }
  .tc-submenu-fade .tc-hover-menu.nav li:hover > ul, .tc-submenu-fade .nav li.open > ul {
    opacity: 1;
    top: 95%;
    visibility: visible;
  }
  .tc-submenu-move .dropdown-menu > li >a {
    -webkit-transition: all ease 0.241s;
    -moz-transition: all ease 0.241s;
    -o-transition: all ease 0.241s;
    transition: all ease 0.241s;
  }
  .tc-open-on-click .dropdown-submenu:hover > .dropdown-menu {
    display: none;
  }
  //expand submenus for tablets in landscape mode
  // .tc-is-mobile .navbar .nav li > ul ul {
  //   display: block;
  // }
}
/* ... */

